--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,11 +15,11 @@ PORT=3000
 # APP_LOCALE=zh-CN
 
 # JWT 密钥（用于管理员认证）
-JWT_SECRET=your-jwt-secret-key-change-this-in-production
+JWT_SECRET=c898398828
 
 # 初始化管理员密码（可选，仅首次启动创建 admin 用户时使用）
 # - 推荐在生产环境显式设置，并在首次登录后尽快修改。
-# INIT_ADMIN_PASSWORD=
+INIT_ADMIN_PASSWORD=admin123
 
 # CORS 允许的来源（可选，逗号/空格分隔）
 # - 为空时默认仅允许本地开发端口（5173/4173）。
@@ -91,6 +91,11 @@ OPENAI_SCOPE=openid profile email offline_access
 # ALL_PROXY=
 # HTTPS_PROXY=
 # HTTP_PROXY=
+
+# 前端默认字体键（可选）：system / ruizi_shuizhu / xindi_jinzhong / xindi_xueshan
+# FRONTEND_FONT_KEY=system
+# 前端默认管理员头像键（可选）：default / icon_1 / icon_2 / icon_3
+# FRONTEND_ADMIN_AVATAR_KEY=default
 # （也支持小写 all_proxy / https_proxy / http_proxy）
 # all_proxy=
 # https_proxy=
