--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,10 +3,13 @@
 
 # API 服务地址（可选）
 # 如果不设置，生产环境会自动使用相对路径 /api
-# 开发环境会使用 http://localhost:3000/api
+# 开发环境默认走 /api（Vite proxy），目标地址默认为 http://localhost:3000
 # 示例：
 # 留空则使用默认配置（推荐）
 VITE_API_URL=
+
+# 开发环境 Vite /api 代理目标（可选）
+VITE_DEV_API_PROXY_TARGET=http://localhost:3000
 
 # Cloudflare Turnstile 站点密钥（可选）
 # 设置后候车室加入队列时会触发人机验证
